<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:paddingHorizontal="@dimen/page_margin1"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="нажми"
            android:id="@+id/btn_export"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_result"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_gravity="end|bottom"
            android:textColor="@color/white"
            android:textSize="80dp"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

<LinearLayout
    android:id="@+id/container"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:paddingVertical="@dimen/page_margin2"
    android:paddingHorizontal="@dimen/page_margin"
    android:weightSum="4"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:text="@string/clear"
        android:id="@+id/btn_clear"
        android:onClick="onClickNumber"
        style="@style/Base.Button.Gray"/>
    <com.google.android.material.button.MaterialButton

        style="@style/Base.Button.Gray"
        android:text="@string/plus_minus"
        android:layout_marginHorizontal="@dimen/page_margin"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/perсent"
        style="@style/Base.Button.Gray"
        android:layout_marginEnd="@dimen/page_margin"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/divide"
        android:id="@+id/btn_divide"
        android:onClick="onClickOperation"
        style="@style/Base.Button.Orange"
        tools:ignore="OnClick" />

</LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/page_margin2"
        android:paddingHorizontal="@dimen/page_margin"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/seven"
            android:id="@+id/btn_seven"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"/>
        <com.google.android.material.button.MaterialButton

            style="@style/Base.Gray.Dark"
            android:text="@string/eight"
            android:id="@+id/btn_eight"
            android:onClick="onClickNumber"
            android:layout_marginHorizontal="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/nine"
            android:id="@+id/btn_nine"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"
            android:layout_marginEnd="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/multiply"
            android:id="@+id/btn_multiply"
            android:onClick="onClickOperation"
            style="@style/Base.Button.Orange"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/page_margin2"
        android:paddingHorizontal="@dimen/page_margin"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/four"
            android:id="@+id/btn_four"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"/>
        <com.google.android.material.button.MaterialButton

            style="@style/Base.Gray.Dark"
            android:id="@+id/btn_five"
            android:onClick="onClickNumber"
            android:text="@string/five"
            android:layout_marginHorizontal="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/six"
            android:id="@+id/btn_six"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"
            android:layout_marginEnd="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/minus"
            android:id="@+id/btn_minus"
            android:onClick="onClickOperation"
            style="@style/Base.Button.Orange"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/page_margin2"
        android:paddingHorizontal="@dimen/page_margin"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/one"
            android:onClick="onClickNumber"
            android:id="@+id/btn_one"
            style="@style/Base.Gray.Dark"/>
        <com.google.android.material.button.MaterialButton

            style="@style/Base.Gray.Dark"
            android:onClick="onClickNumber"
            android:text="@string/two"
            android:id="@+id/btn_two"
            android:layout_marginHorizontal="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/three"
            android:id="@+id/btn_three"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"
            android:layout_marginEnd="@dimen/page_margin"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/plus"
            android:id="@+id/btn_plus"
            android:onClick="onClickOperation"
            style="@style/Base.Button.Orange"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/page_margin2"
        android:paddingHorizontal="@dimen/page_margin3"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/Base.Gray.Dark"
            android:text="@string/zero"
            android:id="@+id/btn_zero"
            android:onClick="onClickNumber"
            android:textAlignment="textStart"
            android:layout_marginEnd="@dimen/page_margin"
            android:layout_weight="4" />

        <com.google.android.material.button.MaterialButton
            android:text="@string/full_stop"
            android:id="@+id/btn_stop"
            android:onClick="onClickNumber"
            style="@style/Base.Gray.Dark"
            android:layout_marginEnd="@dimen/page_margin4"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Base.Button.Orange"
            android:id="@+id/btn_equal"
            android:onClick="onClickOperation"
            android:text="@string/equals" />

    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>